crates/stems-tui/src/tests/snapshots/stems_tui__tests__sections__scripts-view-80x24.snap
---
source: crates/stems-tui/src/tests/sections.rs
assertion_line: 833
expression: text
---
 stems · process-ch…  1 Graph  2 Table  3 Detail  4 Logs  5 Events  6 [Scripts]
┌ Scripts · 4 ─────────────────────────────────────────────────────────────────┐
│workspace · global                                                            │
│  needs-api        custom    ✓ 1.2s A workspace script                        │
│                                                                              │
│b · ✓ healthy                                                                 │
│› create-test-user custom    (email*, role) Create a user with a known passwo…│
│  flaky            custom    running… Fails on its first two attempts         │
│  start            lifecycle                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 process-chain · profile - · daemon pid 4242 · ✓2 !0 ✗0 ↯0 ·1 ?0 ↻1 j/k move · …
