crates/stems-tui/src/tests/snapshots/stems_tui__tests__sections__switch-confirm-80x24.snap
---
source: crates/stems-tui/src/tests/sections.rs
assertion_line: 689
expression: text
---
 stems · process-ch…  1 Graph  2 Table  3 [Detail]  4 Logs  5 Events  6 Scripts
┌ Detail: b · ✓ healthy · lines 1-19/41 ──────── a  [b]  c  d · [ ] ←/→ switch ┐
│✓ healthy · ready (tcp)                                                       │
│pid 102 · up 8s · restarts 0 · variant local                                  │
│ports http:18302                                                              │
│                                                                              │
│Scripts · Enter run · : menu                                                  │
│  create-test-user custom    (email*, role) Create a user with a known passwo…│
│  flaky      ┌ Switch variant ──────────────────────────────────┐             │
│  start      │ restart b as slow? [y/N]                         │             │
│             │ local ▸ slow (process)                           │             │
│Variants · En│                                                  │             │
│  ● local  pr│ y  write stems.local.yaml and apply              │             │
│› ○ slow   pr│ n  cancel                                        │             │
│  ○ docker do└──────────────────────────────────────────────────┘             │
│                                                                              │
│Watchdog · Enter/p pause·resume                                               │
│  watch on · last trigger never                                               │
│  *.py → restart · debounce 200ms                                             │
│                                                                              │
│Health                                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
 ■ x stop  ↻ r restart  : scripts (2+1)  v variant local ▸ slow  p watch on …
 process-chain · profile - · daemon pid 4242 · ✓2 !0 ✗0 ↯0 ·1 ?0 ↻1 j/k row · E…
